--- a/starlight/tailwind/src/components/Header.astro
+++ b/starlight/tailwind/src/components/Header.astro
@@ -22,8 +22,8 @@ const shouldRenderSearch =
 		{shouldRenderSearch && <Search />}
 	</div>
 	<div class="sl-hidden md:sl-flex print:hidden right-group">
-        <a style={{color: "white", "text-decoration-line": "none", "font-weight": 600}} class="hover:cursor-pointer" href="/guides/introduction">Docs</a>
-        <a style={{color: "white", "text-decoration-line": "none", "font-weight": 600}} class="hover:cursor-pointer" href="/components/overview">Components</a>
+        <a class="font-semibold text-white no-underline hover:cursor-pointer hover:bg-stone-700 px-3 transition rounded-lg" href="/guides/introduction">Docs</a>
+        <a class="font-semibold text-white no-underline hover:cursor-pointer hover:bg-stone-700 px-3 transition rounded-lg" href="/guides/components/overview">Components</a>
         <div class="sl-flex social-icons">
 			<SocialIcons />
 		</div>
