--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,6 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 }
-
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -75,7 +74,6 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
 }
-
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
@@ -109,7 +107,6 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -117,4 +114,29 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@theme {
+  /* Text Sizes */
+  --text-5xl: 2.986rem;
+  --text-4xl: 2.488rem;
+  --text-3xl: 2.074rem;
+  --text-2xl: 1.728rem;
+  --text-xl: 1.44rem;
+  --text-large: 1.2rem;
+  --text-medium: 1rem;
+  --text-small: 0.833rem;
+  --text-xs: 0.694rem;
+
+  /* Font Family */
+  --font-primary:
+    "Satoshi", system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-accent:
+    "Cabinet Grotesk", system-ui, "Segoe UI", Roboto, Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+  /* Font Weight */
+  --font-weight-normal: 500;
+  --font-weight-extrabold: 800;
 }
