--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,10 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
+
 @layer base {
+  @import "./styles//global_styles.css";
+
   * {
     @apply border-border outline-ring/50;
   }
