feat(index.css): Add global styles for text wrapping
These text wrap styles are originally from my separate CSS reset file
this project had before. I wanted to add these text wrap styles in
addition to Tailwind's pre-built CSS reset.

--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,22 @@
 @layer base {
   @import "./styles//global_styles.css";
 
+  /* Improved headings in supported browsers */
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    text-wrap: balance;
+  }
+
+  /* prevent orphans in supported browsers */
+  p,
+  li {
+    text-wrap: pretty;
+  }
+
   * {
     @apply border-border outline-ring/50;
   }
